--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,8 +16,8 @@
     background-color: #a0958f;
     color: black;
 }
-.hero-image{
-    
+.hero-image {
+    padding: 0;
 }
 
 /*#region menu-bar*/
