--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -126,35 +126,7 @@ html {
             background-color: #1a1a1a;
         }
 
-        .sidebar-nav li:nth-child(2):before {
-            background-color: #954858;
-        }
-
-        .sidebar-nav li:nth-child(3):before {
-            background-color: #954858;
-        }
-
-        .sidebar-nav li:nth-child(4):before {
-            background-color: #954858;
-        }
-
-        .sidebar-nav li:nth-child(5):before {
-            background-color: #954858;
-        }
-
-        .sidebar-nav li:nth-child(6):before {
-            background-color: #954858;
-        }
-
-        .sidebar-nav li:nth-child(7):before {
-            background-color: #954858;
-        }
-
-        .sidebar-nav li:nth-child(8):before {
-            background-color: #954858;
-        }
-
-        .sidebar-nav li:nth-child(9):before {
+        .sidebar-nav li:nth-child(2):before,.sidebar-nav li:nth-child(3):before,.sidebar-nav li:nth-child(4):before,.sidebar-nav li:nth-child(5):before,.sidebar-nav li:nth-child(6):before,.sidebar-nav li:nth-child(7):before,.sidebar-nav li:nth-child(8):before, .sidebar-nav li:nth-child(9):before  {
             background-color: #954858;
         }
 
