--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -307,3 +307,54 @@
 }
 
 /*#endregion*/
+
+/*#region footer*/
+
+footer {
+    text-align: center;
+    background-color: #000;
+    color: #fff;
+    display: block!important;
+    padding: 30px 0;
+}
+
+footer ul {
+    list-style-type: none;
+    margin-bottom: 0;
+}
+
+footer ul li {display: inline-block;}
+
+footer ul li:first-child {font-weight: 700;}
+
+footer ul li::after {content:"\00a0|";}
+
+footer ul li:last-child::after, footer ul li:first-child::after {content:"";}
+
+footer ul li a {color: #fff;}
+
+@media only screen and (max-width: 600px) {
+    footer {
+        text-align:left;
+        display: block;
+        margin: 0 auto;
+        font-size: 18px;
+    }
+
+    footer ul {
+        width: 210px;
+        display: block;
+        margin-left: auto!important;
+        margin-right: auto!important;
+    }
+
+    footer ul li {
+        display: block;
+    }
+
+    footer ul li::after {
+        content:"";
+    }
+}
+
+/*#endregion*/
