--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,24 +1,21 @@
 ﻿body {
-    font-family: Arial;
+    font-family: Arial, sans-seri;
+    overflow: hidden;
 }
 
 .section-one {
     background-color: #954858;
-    color: white;
+    color: #fff;
     text-align: center;
 }
 
-    .section-one h1 {
-        font-size: 90px;
-    }
+    .section-one h1 {font-size: 90px;}
 
 .section-two{
     background-color: #a0958f;
-    color: black;
+    color: #000;
 }
-.hero-image {
-    padding: 0;
-}
+.hero-image {padding: 0;}
 
 /*#region menu-bar*/
 
@@ -53,17 +50,11 @@
     transition: all 0.5s ease;
 }
 
-    #sidebar-wrapper::-webkit-scrollbar {
-        display: none;
-    }
+    #sidebar-wrapper::-webkit-scrollbar {display: none;}
 
-#wrapper.toggled #sidebar-wrapper {
-    width: 220px;
-}
+#wrapper.toggled #sidebar-wrapper {width: 220px;}
 
-#page-content-wrapper {
-    width: 100%;
-}
+#page-content-wrapper {width: 100%;}
 
 #wrapper.toggled #page-content-wrapper {
     position: absolute;
@@ -78,14 +69,11 @@
     position: absolute;
     top: 0;
     width: 220px;
-    margin: 0;
-    padding: 0;
     list-style: none;
 }
 
     .sidebar-nav li {
         position: relative;
-        line-height: 20px;
         display: inline-block;
         width: 100%;
     }
@@ -101,7 +89,7 @@
             background-color: #1c1c1c;
             -webkit-transition: width .2s ease-in;
             -moz-transition: width .2s ease-in;
-            -ms-transition: width .2s ease-in;
+            -o-transition: width .2s ease-in;
             transition: width .2s ease-in;
         }
 
@@ -119,7 +107,7 @@
             width: 100%;
             -webkit-transition: width .2s ease-in;
             -moz-transition: width .2s ease-in;
-            -ms-transition: width .2s ease-in;
+            -o-transition: width .2s ease-in;
             transition: width .2s ease-in;
         }
 
@@ -147,23 +135,12 @@
         line-height: 44px;
     }
 
-    .sidebar-nav .dropdown-menu {
-        position: relative;
-        width: 100%;
-        padding: 0;
-        margin: 0;
-        border-radius: 0;
-        border: none;
-        background-color: #222;
-        box-shadow: none;
-    }
-
 /*-------------------------------*/
 /*       Hamburger-Cross         */
 /*-------------------------------*/
 
 .hamburger {
-    position: fixed;
+    position: absolute;
     top: 20px;
     z-index: 999;
     display: block;
@@ -174,11 +151,13 @@
     border: none;
 }
 
+.hamburger.is-open {
+    top: -110px;
+}
+
     .hamburger:hover,
     .hamburger:focus,
-    .hamburger:active {
-        outline: none;
-    }
+    .hamburger:active {outline: none;}
 
     .hamburger.is-closed:before {
         content: '';
@@ -190,14 +169,18 @@
         text-align: center;
         opacity: 0;
         -webkit-transform: translate3d(0,0,0);
+        transform: translate3d(0,0,0);
         -webkit-transition: all .35s ease-in-out;
+        transition: all .35s ease-in-out;
     }
 
     .hamburger.is-closed:hover:before {
         opacity: 1;
         display: block;
         -webkit-transform: translate3d(-100px,0,0);
+        transform: translate3d(-100px,0,0);
         -webkit-transition: all .35s ease-in-out;
+        transition: all .35s ease-in-out;
     }
 
     .hamburger.is-closed .hamb-top,
@@ -210,17 +193,13 @@
         left: 0;
         height: 4px;
         width: 100%;
-    }
-
-    .hamburger.is-closed .hamb-top,
-    .hamburger.is-closed .hamb-middle,
-    .hamburger.is-closed .hamb-bottom {
-        background-color: #1a1a1a;
+        background-color: #fff;
     }
 
     .hamburger.is-closed .hamb-top {
         top: 5px;
         -webkit-transition: all .35s ease-in-out;
+        transition: all .35s ease-in-out;
     }
 
     .hamburger.is-closed .hamb-middle {
@@ -231,22 +210,19 @@
     .hamburger.is-closed .hamb-bottom {
         bottom: 5px;
         -webkit-transition: all .35s ease-in-out;
+        transition: all .35s ease-in-out;
     }
 
     .hamburger.is-closed:hover .hamb-top {
         top: 0;
         -webkit-transition: all .35s ease-in-out;
+        transition: all .35s ease-in-out;
     }
 
     .hamburger.is-closed:hover .hamb-bottom {
         bottom: 0;
         -webkit-transition: all .35s ease-in-out;
-    }
-
-    .hamburger.is-open .hamb-top,
-    .hamburger.is-open .hamb-middle,
-    .hamburger.is-open .hamb-bottom {
-        background-color: #1a1a1a;
+        transition: all .35s ease-in-out;
     }
 
     .hamburger.is-open .hamb-top,
@@ -257,7 +233,9 @@
 
     .hamburger.is-open .hamb-top {
         -webkit-transform: rotate(45deg);
+        transform: rotate(45deg);
         -webkit-transition: -webkit-transform .2s cubic-bezier(.73,1,.28,.08);
+        transition: -webkit-transform .2s cubic-bezier(.73,1,.28,.08);
     }
 
     .hamburger.is-open .hamb-middle {
@@ -266,7 +244,9 @@
 
     .hamburger.is-open .hamb-bottom {
         -webkit-transform: rotate(-45deg);
+        transform: rotate(-45deg);
         -webkit-transition: -webkit-transform .2s cubic-bezier(.73,1,.28,.08);
+        transition: -webkit-transform .2s cubic-bezier(.73,1,.28,.08);
     }
 
     .hamburger.is-open:before {
@@ -279,14 +259,18 @@
         text-align: center;
         opacity: 0;
         -webkit-transform: translate3d(0,0,0);
+        transform: translate3d(0,0,0);
         -webkit-transition: all .35s ease-in-out;
+        transition: all .35s ease-in-out;
     }
 
     .hamburger.is-open:hover:before {
         opacity: 1;
         display: block;
         -webkit-transform: translate3d(-100px,0,0);
+        transform: translate3d(-100px,0,0);
         -webkit-transition: all .35s ease-in-out;
+        transition: all .35s ease-in-out;
     }
 
 /*-------------------------------*/
@@ -294,7 +278,6 @@
 /*-------------------------------*/
 
 .overlay {
-    position: fixed;
     display: none;
     width: 100%;
     height: 100%;
