--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,6 +17,19 @@
 }
 .hero-image {padding: 0;}
 
+/*#region PRISTABEL*/
+
+table {
+    display: inline-block;
+}
+
+td {
+    border: 1px solid #000;
+    padding: 5px;
+}
+
+/*#endregion*/
+
 /*#region menu-bar*/
 
 /*-------------------------------*/
