--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,13 +31,39 @@
 
 /*#region PRISTABEL*/
 
-table {
-    display: inline-block;
+.tables {
+    padding: 0 15px;
 }
+
+.tables table {
+    display: inline-block;
+    margin-top: 30px;
+    margin: 0.6vw;
+}
+
+.tables table:nth-child(3) {margin-bottom: 31px;}
+
+.tables table:nth-child(4) {margin-bottom: 124px;}
 
 td {
     border: 1px solid #000;
     padding: 5px;
+}
+
+@media (min-width : 1171px) {
+    .tables table{padding: 0;}
+    .tables table:nth-child(1) {
+        width: 18%;
+    }
+    .tables table:nth-child(2) {
+        width: 15%;
+    }
+    .tables table:nth-child(3) {
+        width: 42%;
+    }
+    .tables table:nth-child(4) {
+        width: 20%;
+    }
 }
 
 /*#endregion*/
