--- a/assets/css/begivenheder.css
+++ b/assets/css/begivenheder.css
@@ -15,3 +15,10 @@
     background-color: #954858;
     color: lightgrey;
 }
+
+.concert{
+    color: #565454;
+    text-decoration:underline;
+    padding-bottom: 20px;
+    text-align: right;
+}
