--- a/assets/css/dødetyre.css
+++ b/assets/css/dødetyre.css
@@ -10,6 +10,10 @@ table{
     margin: 0 auto;
 }
 
+.tabel {
+    margin-bottom: 50px;
+}
+
 .tabel th{
     font-size: 20px;
     font-weight: bold;
